--- a/style.css
+++ b/style.css
@@ -113,3 +113,44 @@ p {
 .contactSection {
   margin-top: 40px;
 }
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 35px;
+    margin: 8px 0;
+  }
+  h2 {
+    font-size: 25px;
+    margin-top: 10px;
+  }
+  h3 {
+    font-size: 20px;
+    padding: 0 15px;
+  }
+  p {
+    text-align: justify;
+  }
+  .email-link {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+  .projectBtn {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
+  .projectSection h2 {
+    text-align: center;
+  }
+  a {
+    font-size: 15px;
+  }
+  .about-paragraphs p {
+    text-align: justify;
+    margin: 0;
+    padding: 10px 15px;
+  }
+  .navigation-links {
+    margin-top: 20px;
+  }
+}
