--- a/style.css
+++ b/style.css
@@ -55,18 +55,15 @@ img {
 .contact-link {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
-  color: white;
+  color: #ffffff;
+}
+.contact-link:hover {
+  color: #ffffff;
 }
 
 .about-link {
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
-}
-
-.homepage-link {
-  color: var(--primary-color);
-  text-align: center;
-  display: block;
 }
 
 .about-paragraphs {
@@ -95,6 +92,9 @@ img {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
+}
+.projectBtn:hover {
+  color: #ffffff;
 }
 
 p {
@@ -138,6 +138,8 @@ p {
     display: flex;
     justify-content: center;
     padding: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   .projectSection h2 {
     text-align: center;
